# ShitCrypt

./: CMakeLists.txt  MANIFEST.ini  README.md  ShitCrypt.py  encrypt.c  keygen.c  main.py  makefile
include/: gcrypt-module.h  gcrypt.h  gpg-error.h
key/: keygen.c  makefile
